--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@coinbase/onchainkit": "^0.38.0",
     "@farcaster/frame-sdk": "^0.0.28",
+    "@farcaster/miniapp-sdk": "^0.2.3",
     "@tanstack/react-query": "^5.62.0",
     "ethers": "^5.8.0",
     "next": "^14.2.0",
