V2: Add Buy & Spraay page with Coinbase Onramp

--- a/.env.local.example
+++ b/.env.local.example
@@ -4,5 +4,12 @@ NEXT_PUBLIC_ONCHAINKIT_API_KEY=YOUR_CDP_CLIENT_API_KEY_HERE
 # Get your Paymaster URL from https://portal.cdp.coinbase.com (enables gasless transactions)
 NEXT_PUBLIC_PAYMASTER_URL=https://api.developer.coinbase.com/rpc/v1/base/YOUR_PAYMASTER_KEY_HERE
 
+# CDP Project ID — used for Coinbase Onramp widget
+NEXT_PUBLIC_CDP_PROJECT_ID=YOUR_CDP_PROJECT_ID_HERE
+
+# CDP API Credentials — used server-side for session token generation (required since July 2025)
+CDP_API_KEY=YOUR_CDP_API_KEY_NAME_HERE
+CDP_API_SECRET=YOUR_CDP_API_SECRET_HERE
+
 # Optional: WalletConnect Project ID from https://cloud.walletconnect.com
 NEXT_PUBLIC_WC_PROJECT_ID=
