--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spraay-base-app",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coinbase/cbpay-js": "^2.4.0",
+    "@coinbase/cdp-sdk": "^1.0.0",
     "@coinbase/onchainkit": "^0.38.0",
     "@farcaster/frame-sdk": "^0.0.28",
     "@farcaster/miniapp-sdk": "^0.2.3",
